k8s/pinponfel/keycloak/keycloak-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      restartPolicy: Always
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:14.0.0
        ports:
        - name: http
          containerPort: 8080
        - name: https
          containerPort: 8443
        # resources:
        #   requests:
        #     cpu: 50m
        #     memory: 100Mi
          # limits:
          #   cpu: 50m
          #   memory: 800Mi
        readinessProbe:
          httpGet:
            path: /auth/realms/master
            port: 8080
