k8s/pinponfel/keycloak/postgres-deploy.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: psql-keycloak
  namespace: keycloak
  labels:
    app: psql-keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: psql-keycloak
  template:
    metadata:
      labels:
        app: psql-keycloak
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext:
        fsGroup: 1000
      containers:
        - name: psql-keycloak
          image: postgres:13
          imagePullPolicy: IfNotPresent
          resources:
            # requests:
            #   cpu: 100m
            #   memory: 256Mi
            limits:
              cpu: 50m
              memory: 100Mi
          ports:
            - containerPort: 5432
              protocol: TCP
          volumeMounts:
            - name: psql-data
              mountPath: /var/lib/postgresql/data
              subPath: psql-keycloak-data
      volumes:
        - name: psql-data
          persistentVolumeClaim:
            claimName: psql-keycloak-pvc
