k8s/pinponfel/keycloak/postgres-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: psql-keycloak-svc
  namespace: keycloak
spec:
  ports:
    - name: postgres
      port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    app: psql-keycloak
  type: ClusterIP
