k8s/pinponfel/keycloak/02-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: keycloak-ingress
  namespace: keycloak
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls: 
  - hosts:
    - keycloak.felagonell.com
    secretName: keycloak-tls-secret
  rules:
  - host: keycloak.felagonell.com
    http:
      paths:
      - backend:
          serviceName: keycloak-svc
          servicePort: 8080
        path: /
